--- a/stock_produit/templates/Base/base.html
+++ b/stock_produit/templates/Base/base.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Dashboard - Monts des Oliviers{% endblock %}</title>
+    <link rel="manifest" href="{% static 'manifest.json' %}">
+    <meta name="theme-color" content="#0d6efd">
     
     <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -336,6 +339,12 @@
             }
         }
         
+        .img-icons {
+            width: 40px;
+            height: 40px;
+            margin-right: 2px;
+            border-radius: 15px ;
+        }
         @media (max-width: 768px) {
             .sidebar {
                 width: 280px;
@@ -450,7 +459,7 @@
     <!-- Sidebar -->
     <div class="sidebar" id="sidebar">
         <div class="sidebar-header">
-            <h3><i class="fas fa-mountain me-2"></i> Monts des Oliviers</h3>
+            <h3><img src="{% static 'icons/icon-192.png' %}" alt="" class="img-icons"> Monts des Oliviers</h3>
             <button class="close-sidebar" id="closeSidebar">
                 <i class="fas fa-times"></i>
             </button>
@@ -526,6 +535,16 @@
                     <h1>{% block page_title %}Dashboard{% endblock %}</h1>
                     <p>{% block page_subtitle %}Gestion des opérations commerciales{% endblock %}</p>
                 </div>
+            </div>
+
+            <div>
+                    <!-- Bouton Installer PWA -->
+                <button id="installBtn"
+                        type="button"
+                        class="btn btn-primary"
+                        style="display:none;">
+                    Installer l’application
+                </button>
             </div>
             
             <div class="top-actions">
@@ -619,5 +638,18 @@
             });
         });
     </script>
+
+    
+<script>
+if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register("{% static 'js/service-worker.js' %}")
+        .then(() => console.log("Service Worker enregistré"))
+        .catch(err => console.error("Erreur SW", err));
+}
+</script>
+
+
+<script src="{% static 'js/install-pwa.js' %}"></script>
+
 </body>
 </html>
