--- a/stock_produit/templates/Base/base.html
+++ b/stock_produit/templates/Base/base.html
@@ -497,6 +497,14 @@
                         <span>Utilisateurs</span>
                     </a>
                 </li>
+
+
+                <li>
+                    <a href="{% url 'rapport_journalier' %}" class="{% if 'rapport_journalier' in request.path %}active{% endif %}">
+                        <i class="fa-solid fa-book"></i>
+                        <span>Rapport_journaliers</span>
+                    </a>
+                </li>
             </ul>
         </div>
         
