--- a/stock_produit/templates/Rapport/rapport_journalier.html
+++ b/stock_produit/templates/Rapport/rapport_journalier.html
@@ -3,6 +3,31 @@
 {% block page_title %}Gestion des Rapports journaliers{% endblock %}
 
 {% block content %}
+
+<div class="card shadow-sm border-0 mb-4">
+    <div class="card-body p-3">
+        <form method="get" action="{% url 'rapport_journalier' %}" id="dateForm" class="mb-3">
+    
+    <label for="date" class="fw-bold">Choisir une date :</label>
+
+    <input 
+        type="date"
+        name="date"
+        id="date"
+        class="form-control w-auto"
+        value="{{ selected_date|date:'Y-m-d' }}"
+        onchange="document.getElementById('dateForm').submit();"
+    >
+
+</form>
+        <div class="total-jour text-end mt-4 pt-3 border-top">
+            <h5 class="text-primary">
+                <i class="bi bi-cash-stack me-2"></i>
+                Total jour : <span class="fw-bold">{{ total_general }}</span> FCFA
+            </h5>
+        </div>
+    </div>
+</div>
 <div class="container my-4" id="receipt">
     <h3 class="text-center">
         <i class="fas fa-receipt me-2" style="color: #3b82f6;"></i> Rapport des ventes - {{ date }}
